--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "concurrently": "^2.0.0",
     "lite-server": "^2.2.0",
+    "lodash": "^4.11.1",
     "typescript": "^1.8.10",
     "typings": "^0.7.12",
     "canonical-path": "0.0.2",
